# rafter-cli

./: .dockerignore  .env.example  .gitignore  .pre-commit-hooks.yaml  .rafter.yml  AGENTS.md  CHANGELOG.md  CLAUDE.local.md  CLAUDE.md  CONTRIBUTING.md  DOLT_REMOTE.md  Dockerfile  PUBLISHING.md  README.md  SECURITY.md  SKILL.md  action.yml  demo.tape  llms.txt  lnndr2jdarkgk3f9t5ehrssihbdhtbau.darc  m0kle3qpsmodg2peoltvgurtlormsna4  manifest  outreach-drafts.md  pnpm-lock.yaml  pnpm-workspace.yaml
python/: INTEGRATION_NOTES_skill_scanner.md  README.md  pyproject.toml  test_output.json  test_rafter_cli.sh  test_scan_md.md
python/rafter_cli/: __init__.py  __main__.py
python/tests/: test_agent_audit_share.py  test_agent_audit_skill.py  test_agent_audit_skill_deep.py  test_agent_baseline.py  test_agent_components.py  test_agent_init.py  test_agent_install_hook.py  test_agent_scan_history.py  test_agent_status.py  test_agent_uninstall.py  test_agent_verify.py  test_api_scope.py  test_audit_logger_redaction.py  test_before_model.py  test_betterleaks_severity.py  test_binary_manager.py  test_brief.py  test_calibration.py  test_ci.py  test_command_interceptor.py  test_command_interceptor_policy.py  test_completion.py  test_config_manager.py  test_config_secret_handling.py  test_custom_patterns.py  test_docs_loader.py  test_e2e_cli.py  test_error_handling_gauntlet.py  test_formatter.py  test_gateway_dispatch.py  test_git_diff.py  test_git_utils.py  test_gitleaks_severity.py  test_handle_403.py  test_hook.py  test_hook_config.py  test_hook_control.py  test_hook_extra_args.py  (+35 more)
(+543 files in other folders)
