[tool.poetry]
name = "rafter-cli"
version = "0.5.5"
description = "Rafter CLI — security for AI builders"
authors = ["Rafter Team <hello@rafter.so>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
typer = "^0.15.0"
click = ">=8.0.0,<9.0.0"
rich = "^13.7.1"
python-dotenv = "^1.0.1"
requests = "^2.31.0"
urllib3 = ">=2.6.0,<3"
pyyaml = "^6.0.1"
mcp = "^1.9.0"
watchdog = "^4.0.0"

[tool.poetry.scripts]
rafter = "rafter_cli.__main__:app"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-mock = "^3.14.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 